--- a/index.html
+++ b/index.html
@@ -12,9 +12,24 @@
 </head>
 
 <body>
-    <header class="fixed-top topo">
-        <img src="/img/PZ.png" alt="logo pz" style="height: 66px;">        
+    <header class="fixed-top">
+        <nav class="navbar navbar-expand-lg navbar-light topo">
+            <a class="navbar-brand font" href="index.html">
+                <img class="ms-3" src="/img/PZ.png" width="auto" height="64" alt="Logo PZ Games">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-item nav-link ms-2" href="#">Ofertas</a>
+                    <a class="nav-item nav-link ms-4" href="#">Carrinho</a>
+                </div>
+            </div>
+        </nav>
     </header>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
         crossorigin="anonymous"></script>
