--- a/index.html
+++ b/index.html
@@ -12,23 +12,80 @@
 </head>
 
 <body>
-    <header class="fixed-top">
-        <nav class="navbar navbar-expand-lg navbar-light topo">
-            <a class="navbar-brand font" href="index.html">
-                <img class="ms-3" src="/img/PZ.png" width="auto" height="64" alt="Logo PZ Games">
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-item nav-link ms-2" href="#">Ofertas</a>
-                    <a class="nav-item nav-link ms-4" href="#">Carrinho</a>
-                </div>
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top topo">
+        <a class="navbar-brand p-0 m-0 d-inline-block font" href="index.html" style="max-width: 64px;">
+            <img class="img-fluid" src="/img/PZ.png" alt="Logo PZ Games">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-item nav-link ms-2" href="#">Ofertas</a>
+                <a class="nav-item nav-link ms-4" href="#">Carrinho</a>
             </div>
-        </nav>
-    </header>
+        </div>
+    </nav>
+    <div class="container-fluid d-flex justify-content-center w-100" style="margin-top: 64px;">
+        <div class="container d-flex flex-column contmeio">
+            <h2 class="mt-3 me-auto"><b><u>OFERTAS</u></b></h2>
+            <div id="carouselExampleIndicators" class="carousel slide d-flex justify-content-center align-items-center">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                        class="active mt-5" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" class="mt-5"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" class="mt-5"
+                        aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner d-flex justify-content-center w-auto">
+                    <div class="carousel-item active d-flex justify-content-center mx-auto">
+                        <div class="card" style="width: 18rem;">
+                            <img src="img/cs2.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">COUNTER STRIKE 2 PRIME</h5>
+                                <p class="card-text"></p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="card" style="width: 18rem;">
+                            <img src="img/gowr.png" class="card-img-top" alt="Logo oferta 2">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of the card’s content.</p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="card" style="width: 18rem;">
+                            <img src="..." class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of the card’s content.</p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
