alter offer carousel + games grid done

--- a/index.html
+++ b/index.html
@@ -22,74 +22,134 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link ms-2" href="#">Ofertas</a>
+                <a class="nav-item nav-link ms-2" href="index.html">Ofertas</a>
                 <a class="nav-item nav-link ms-4" href="#">Carrinho</a>
             </div>
         </div>
     </nav>
     <div class="container-fluid d-flex justify-content-center w-100" style="margin-top: 64px;">
         <div class="container d-flex flex-column contmeio">
-            <h2 class="mt-3 me-auto"><b><u>OFERTAS</u></b></h2>
-            <div id="carouselExampleIndicators" class="carousel slide d-flex justify-content-center align-items-center">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
-                        class="active mt-5" aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" class="mt-5"
-                        aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" class="mt-5"
-                        aria-label="Slide 3"></button>
-                </div>
-                <div class="carousel-inner d-flex justify-content-center w-auto">
-                    <div class="carousel-item active d-flex justify-content-center mx-auto">
-                        <div class="card" style="width: 18rem;">
-                            <img src="img/cs2.png" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">COUNTER STRIKE 2 PRIME</h5>
-                                <p class="card-text"></p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="card" style="width: 18rem;">
-                            <img src="img/gowr.png" class="card-img-top" alt="Logo oferta 2">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card’s content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="card" style="width: 18rem;">
-                            <img src="..." class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card’s content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
-                            </div>
-                        </div>
+            <h2 class="mt-3 mb-3 ms-4 me-auto"><b>OFERTAS</b></h2>
+            <div class="d-flex justify-content-center">
+                <div class="card">
+                    <img src="img/cs2.png" class="card-img-top" alt="logo oferta 1">
+                    <div class="card-body">
+                        <h5 class="card-title">COUNTER STRIKE 2 PRIME</h5>
+                        <p class="card-text">Passe Prime do jogo CS2, que dá acesso ao modo ranqueado e a servidores
+                            personalizados de jogo.</p>
+                        <a href="#" class="btn btn-light"><s>R$ 85,99</s> R$ 56,99</a>
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
+                <div class="card">
+                    <img src="img/gowr.png" class="card-img-top" alt="logo oferta 2">
+                    <div class="card-body">
+                        <h5 class="card-title">God of War: Ragnarok</h5>
+                        <p class="card-text">Continuação da franquia de 2018 e fim do ciclo God of War.</p>
+                        <a href="#" class="btn btn-light"><s>R$ 249,90</s> R$ 219,90</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="img/mc.png" class="card-img-top" alt="logo oferta 3">
+                    <div class="card-body">
+                        <h5 class="card-title">Minecraft Java + Bedrock</h5>
+                        <p class="card-text">Um dos jogos mais vendidos do mundo, contas de Minecraft disponíveis apenas
+                            aqui no PZ Games!</p>
+                        <a href="#" class="btn btn-light"><s>R$ 99,99</s> R$ 69,99</a>
+                    </div>
+                </div>
+            </div>
+            <div class="gradejogos mt-4">
+                <h2 class="ms-4 mb-3 me-auto"><b>JOGOS</b></h2>
+                <div class="cont-cards d-flex flex-wrap justify-content-around">
+                    <div class="card-jogo">
+                        <img src="img/bf5.jpg" alt="">
+                        <h4>Battlefield V</h4>
+                        <div>
+                            <span>R$ 69,90</span>
+                            <button class="btn btn-light">+</button>
+                        </div>
+                    </div>
+                    <div class="card-jogo">
+                        <img src="img/repo.jpg" alt="">
+                        <h4>R.E.P.O.</h4>
+                        <div>
+                            <span>R$ 69,90</span>
+                            <button class="btn btn-light">+</button>
+                        </div>
+                    </div>
+                    <div class="card-jogo">
+                        <img src="img/hzd.jpg" alt="">
+                        <h4>Zero Dawn</h4>
+                        <div>
+                            <span>R$ 69,90</span>
+                            <button class="btn btn-light">+</button>
+                        </div>
+                    </div>
+                    <div class="card-jogo">
+                        <img src="img/rdr2.jpg" alt="">
+                        <h4>RDR 2</h4>
+                        <div>
+                            <span>R$ 69,90</span>
+                            <button class="btn btn-light">+</button>
+                        </div>
+                    </div>
+                    <div class="card-jogo">
+                        <img src="img/hollow.jpg" alt="">
+                        <h4>Silksong</h4>
+                        <div>
+                            <span>R$ 69,90</span>
+                            <button class="btn btn-light">+</button>
+                        </div>
+                    </div>
+                    <div class="cont-cards d-flex flex-wrap justify-content-around">
+                        <div class="card-jogo">
+                            <img src="img/sg.jpg" alt="">
+                            <h4>STEINS;GATE</h4>
+                            <div>
+                                <span>R$ 69,90</span>
+                                <button class="btn btn-light">+</button>
+                            </div>
+                        </div>
+                        <div class="card-jogo">
+                            <img src="img/skyrim.jpg" alt="">
+                            <h4>TES: Skyrim</h4>
+                            <div>
+                                <span>R$ 69,90</span>
+                                <button class="btn btn-light">+</button>
+                            </div>
+                        </div>
+                        <div class="card-jogo">
+                            <img src="img/gtav.jpg" alt="">
+                            <h4>GTA V</h4>
+                            <div>
+                                <span>R$ 69,90</span>
+                                <button class="btn btn-light">+</button>
+                            </div>
+                        </div>
+                        <div class="card-jogo">
+                            <img src="img/poly.jpg" alt="">
+                            <h4>Poly Bridge</h4>
+                            <div>
+                                <span>R$ 69,90</span>
+                                <button class="btn btn-light">+</button>
+                            </div>
+                        </div>
+                        <div class="card-jogo">
+                            <img src="img/rayman.jpg" alt="">
+                            <h4>Rayman Legends</h4>
+                            <div>
+                                <span>R$ 69,90</span>
+                                <button class="btn btn-light">+</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
-        crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
