--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="header.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <title>PZ Games</title>
 </head>
-
 <body>
+    
     <nav class="navbar navbar-expand-lg navbar-light fixed-top topo">
-        <a class="navbar-brand p-0 m-0 d-inline-block font" href="index.html" style="max-width: 64px;">
+        <div class="container-fluid d-flex justify-content-center w-100 contheader">
+        <a class="navbar-brand p-0 m-0 d-inline-block font" href="index.html">
             <img class="img-fluid" src="/img/PZ.png" alt="Logo PZ Games">
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -26,7 +26,11 @@
                 <a class="nav-item nav-link ms-4" href="#">Carrinho</a>
             </div>
         </div>
+        </div>  
+        </div>
     </nav>
+    
+    <!--Todos os preços dos jogos foram retirados da steam!-->
     <div class="container-fluid d-flex justify-content-center w-100" style="margin-top: 64px;">
         <div class="container d-flex flex-column contmeio">
             <h2 class="mt-3 mb-3 ms-4 me-auto"><b>OFERTAS</b></h2>
@@ -65,7 +69,7 @@
                         <img src="img/bf5.jpg" alt="">
                         <h4>Battlefield V</h4>
                         <div>
-                            <span>R$ 69,90</span>
+                            <span>R$ 229,00</span>
                             <button class="btn btn-light">+</button>
                         </div>
                     </div>
@@ -73,7 +77,7 @@
                         <img src="img/repo.jpg" alt="">
                         <h4>R.E.P.O.</h4>
                         <div>
-                            <span>R$ 69,90</span>
+                            <span>R$ 32,99</span>
                             <button class="btn btn-light">+</button>
                         </div>
                     </div>
@@ -81,7 +85,7 @@
                         <img src="img/hzd.jpg" alt="">
                         <h4>Zero Dawn</h4>
                         <div>
-                            <span>R$ 69,90</span>
+                            <span>R$ 249,50</span>
                             <button class="btn btn-light">+</button>
                         </div>
                     </div>
@@ -89,7 +93,7 @@
                         <img src="img/rdr2.jpg" alt="">
                         <h4>RDR 2</h4>
                         <div>
-                            <span>R$ 69,90</span>
+                            <span>R$ 299,90</span>
                             <button class="btn btn-light">+</button>
                         </div>
                     </div>
@@ -97,7 +101,7 @@
                         <img src="img/hollow.jpg" alt="">
                         <h4>Silksong</h4>
                         <div>
-                            <span>R$ 69,90</span>
+                            <span>R$ 96,99</span>
                             <button class="btn btn-light">+</button>
                         </div>
                     </div>
@@ -106,7 +110,7 @@
                             <img src="img/sg.jpg" alt="">
                             <h4>STEINS;GATE</h4>
                             <div>
-                                <span>R$ 69,90</span>
+                                <span>R$ 57,99</span>
                                 <button class="btn btn-light">+</button>
                             </div>
                         </div>
@@ -114,7 +118,7 @@
                             <img src="img/skyrim.jpg" alt="">
                             <h4>TES: Skyrim</h4>
                             <div>
-                                <span>R$ 69,90</span>
+                                <span>R$ 149,00</span>
                                 <button class="btn btn-light">+</button>
                             </div>
                         </div>
@@ -122,15 +126,15 @@
                             <img src="img/gtav.jpg" alt="">
                             <h4>GTA V</h4>
                             <div>
-                                <span>R$ 69,90</span>
+                                <span>R$ 149,90</span>
                                 <button class="btn btn-light">+</button>
                             </div>
                         </div>
                         <div class="card-jogo">
                             <img src="img/poly.jpg" alt="">
-                            <h4>Poly Bridge</h4>
+                            <h4>Poly Bridge 3</h4>
                             <div>
-                                <span>R$ 69,90</span>
+                                <span>R$ 29,99</span>
                                 <button class="btn btn-light">+</button>
                             </div>
                         </div>
@@ -138,7 +142,7 @@
                             <img src="img/rayman.jpg" alt="">
                             <h4>Rayman Legends</h4>
                             <div>
-                                <span>R$ 69,90</span>
+                                <span>R$ 17,99</span>
                                 <button class="btn btn-light">+</button>
                             </div>
                         </div>
