--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <title>PZ Games - Início</title>
 </head>
-<body>
+<body class="d-flex flex-column">
     
     <nav class="navbar navbar-expand-lg navbar-light fixed-top topo">
         <div class="container-fluid d-flex justify-content-center w-100 contheader">
@@ -27,7 +27,6 @@
             </div>
         </div>
         </div>  
-        </div>
     </nav>
     
     <!--Todos os preços dos jogos foram retirados da steam!-->
@@ -150,7 +149,11 @@
                 </div>
             </div>
         </div>
-
+    </div>
+    <footer class="end_space mt-auto d-flex justify-content-around align-items-center">
+        <p class="mt-3">© PZ Games - Todos os direitos reservados 2025</p>
+        <p class="mt-3">Artur Felipe Triches e Eduardo da Luz Bernardi</p>
+    </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
             crossorigin="anonymous"></script>
