--- a/cart.html
+++ b/cart.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <title>PZ Games - Carrinho</title>
@@ -35,18 +36,57 @@
         <div class="container d-flex flex-column contmeio">
             <h2 class="mt-4 mb-3 ms-4 me-auto"><b>CARRINHO</b></h2>
             <div class="row  mt-2 cart">
-                <div class="col-5 infocart">
+                <div class="col-5 container-md infocart">
                     <h3 class="mt-3 ms-2 font">Jogos: </h3>
                     <div class="gamearea mt-3 d-flex justify-content-center align-items-center">
                         <p>(sem jogos selecionados)</p>
                     </div>
-                    <div class="pricearea mt-3 d-flex justify-content-end">
+                    <div class="pricearea mt-2">
+                        <p class="font d-flex justify-content-end "><b>Preços:</b><br><br>Jogo 1: R$ 0.00<br>Jogo 2: R$
+                            0.00<br>Jogo 3: R$ 0.00</p>
+                        <div class="line d-flex justify-content-center"></div>
+                        <h2 class="d-flex justify-content-end mt-4 font_titulo">Total a pagar: R$ 0.00</h2>
                     </div>
                 </div>
                 <div class="col-md-auto spacing"></div>
-                <div class="col-6 infocart2"></div>
+                <div class="col-6 container-md infocart2">
+                    <h3 class="mt-3 ms-2 font">Pagamento: </h3>
+                    <div class="paymentarea mt-2 container-md d-flex flex-column">
+                        <div class="gamearea mt-2 d-flex justify-content-start flex-column">
+                            <div class="form-check mb-2 mt-2 ms-3">
+                                <input class="form-check-input" type="radio" name="flexRadioDefault"
+                                    id="flexRadioDefault1">
+                                <label class="form-check-label" for="flexRadioDefault1">
+                                    <i class="bi bi-credit-card"></i> Cartões (Pagamentos em até 3x para compras acima de R$300.00)
+                                </label>
+                            </div>
+                            <div class="form-check mb-2 ms-3">
+                                <input class="form-check-input" type="radio" name="flexRadioDefault"
+                                    id="flexRadioDefault2" checked>
+                                <label class="form-check-label" for="flexRadioDefault2">
+                                    <i class="bi bi-currency-dollar"></i> PIX
+                                </label>
+                            </div>
+                            <div class="form-check ms-3">
+                                <input class="form-check-input" type="radio" name="flexRadioDefault"
+                                    id="flexRadioDefault2" checked>
+                                <label class="form-check-label" for="flexRadioDefault2">
+                                    <i class="bi bi-paperclip"></i> Boleto
+                                </label>
+                            </div>
+                            <div class="moreprod">
+                                <h4 class="mt-4 ms-3 light">Mais produtos: </h4>
+                                <a href="index.html" class="btn btn-light mt-2 ms-4">De volta à página inicial!</a>
+                            </div>
+                        </div>
+                        <div class="finishpay d-flex justify-content-center mt-3">
+                            <button class="btn btn-warning end_button">Prosseguir para o pagamento</button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
+    </div>
     </div>
     </div>
     <footer class="end_space mt-auto d-flex justify-content-around align-items-center">
