--- a/index.html
+++ b/index.html
@@ -9,30 +9,31 @@
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <title>PZ Games - Início</title>
 </head>
+
 <body class="d-flex flex-column">
-    
+
     <nav class="navbar navbar-expand-lg navbar-light fixed-top topo">
         <div class="container-fluid d-flex justify-content-center w-100 contheader">
-        <a class="navbar-brand p-0 m-0 d-inline-block font" href="index.html">
-            <img class="img-fluid" src="/img/PZ.png" alt="Logo PZ Games">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-item nav-link ms-2" href="index.html">Ofertas</a>
-                <a class="nav-item nav-link ms-4" href="cart.html">Carrinho</a>
+            <a class="navbar-brand p-0 m-0 d-inline-block font" href="index.html">
+                <img class="img-fluid" src="/img/PZ.png" alt="Logo PZ Games">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-item nav-link ms-2" href="index.html">Ofertas</a>
+                    <a class="nav-item nav-link ms-4" href="cart.html">Carrinho</a>
+                </div>
             </div>
         </div>
-        </div>  
     </nav>
-    
+
     <!--Todos os preços dos jogos foram retirados da steam!-->
     <div class="container-fluid d-flex justify-content-center w-100">
         <div class="container d-flex flex-column contmeio">
-            <h2 class="mt-3 mb-3 ms-4 me-auto"><b>OFERTAS</b></h2>
+            <h2 class="mt-3 mb-3 ms-4 me-auto font_titulo"><b>OFERTAS</b></h2>
             <div class="d-flex justify-content-center">
                 <div class="card">
                     <img src="img/cs2.png" class="card-img-top" alt="logo oferta 1">
@@ -62,7 +63,7 @@
                 </div>
             </div>
             <div class="gradejogos mt-4">
-                <h2 class="ms-4 mb-3 me-auto"><b>JOGOS</b></h2>
+                <h2 class="ms-4 mb-3 me-auto font_titulo"><b>JOGOS</b></h2>
                 <div class="cont-cards d-flex flex-wrap justify-content-around">
                     <div class="card-jogo">
                         <img class="img_pad" src="img/bf5.jpg" alt="logo BF5">
@@ -154,9 +155,9 @@
         <p class="mt-3">© PZ Games - Todos os direitos reservados 2025</p>
         <p class="mt-3">Artur Felipe Triches e Eduardo da Luz Bernardi</p>
     </footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
-            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
