--- a/index.html
+++ b/index.html
@@ -36,29 +36,35 @@
             <h2 class="mt-3 mb-3 ms-4 me-auto font_titulo"><b>OFERTAS</b></h2>
             <div class="d-flex justify-content-center">
                 <div class="card">
+                    <a href="/jogos/cs2.html" class="text-decoration-none text-dark">
                     <img src="img/cs2.png" class="card-img-top" alt="logo oferta 1">
                     <div class="card-body">
                         <h5 class="card-title">COUNTER STRIKE 2 PRIME</h5>
                         <p class="card-text">Passe Prime do jogo CS2, que dá acesso ao modo ranqueado e a servidores
                             personalizados de jogo.</p>
                         <a href="#" class="btn btn-light"><s>R$ 85,99</s> R$ 56,99</a>
+                        </a>
                     </div>
                 </div>
                 <div class="card">
+                    <a href="/jogos/gowr.html" class="text-decoration-none text-dark">
                     <img src="img/gowr.png" class="card-img-top" alt="logo oferta 2">
                     <div class="card-body">
                         <h5 class="card-title">God of War: Ragnarok</h5>
                         <p class="card-text">Continuação da franquia de 2018 e fim do ciclo God of War.</p>
                         <a href="#" class="btn btn-light"><s>R$ 249,90</s> R$ 219,90</a>
+                        </a>
                     </div>
                 </div>
                 <div class="card">
+                    <a href="/jogos/mc.html" class="text-decoration-none text-dark">
                     <img src="img/mc.png" class="card-img-top" alt="logo oferta 3">
                     <div class="card-body">
                         <h5 class="card-title">Minecraft Java + Bedrock</h5>
                         <p class="card-text">Um dos jogos mais vendidos do mundo, contas de Minecraft disponíveis apenas
                             aqui no PZ Games!</p>
                         <a href="#" class="btn btn-light"><s>R$ 99,99</s> R$ 69,99</a>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -66,40 +72,50 @@
                 <h2 class="ms-4 mb-3 me-auto font_titulo"><b>JOGOS</b></h2>
                 <div class="cont-cards d-flex flex-wrap justify-content-around">
                     <div class="card-jogo">
+                        <a href="/jogos/bf5.html" class="text-decoration-none text-dark">
                         <img class="img_pad" src="img/bf5.jpg" alt="logo BF5">
                         <h4>Battlefield V</h4>
+                        </a>
                         <div>
                             <span>R$ 229,00</span>
                             <button class="btn btn-light">+</button>
                         </div>
                     </div>
                     <div class="card-jogo">
+                        <a href="/jogos/repo.html" class="text-decoration-none text-dark">
                         <img class="img_pad" src="img/repo.jpg" alt="logo REPO">
                         <h4>R.E.P.O.</h4>
+                        </a>
                         <div>
                             <span>R$ 32,99</span>
                             <button class="btn btn-light">+</button>
                         </div>
                     </div>
                     <div class="card-jogo">
+                        <a href="/jogos/hzd.html" class="text-decoration-none text-dark">
                         <img class="img_pad" src="img/hzd.jpg" alt="logo HORIZON">
                         <h4>Zero Dawn</h4>
+                        </a>
                         <div>
                             <span>R$ 249,50</span>
                             <button class="btn btn-light">+</button>
                         </div>
                     </div>
                     <div class="card-jogo">
+                        <a href="/jogos/rdr2.html" class="text-decoration-none text-dark">
                         <img class="img_pad" src="img/rdr2.jpg" alt="logo RED DEAD">
                         <h4>RDR 2</h4>
+                        </a>
                         <div>
                             <span>R$ 299,90</span>
                             <button class="btn btn-light">+</button>
                         </div>
                     </div>
                     <div class="card-jogo">
+                        <a href="/jogos/hollow.html" class="text-decoration-none text-dark">
                         <img class="img_pad" src="img/hollow.jpg" alt="logo HOLLOW KNIGHT">
                         <h4>Silksong</h4>
+                        </a>
                         <div>
                             <span>R$ 96,99</span>
                             <button class="btn btn-light">+</button>
@@ -107,40 +123,50 @@
                     </div>
                     <div class="cont-cards d-flex flex-wrap justify-content-around">
                         <div class="card-jogo">
+                            <a href="/jogos/sg.html" class="text-decoration-none text-dark">
                             <img class="img_pad" src="img/sg.jpg" alt="logo STEINS GATE">
                             <h4>STEINS;GATE</h4>
+                            </a>
                             <div>
                                 <span>R$ 57,99</span>
                                 <button class="btn btn-light">+</button>
                             </div>
                         </div>
                         <div class="card-jogo">
+                            <a href="/jogos/skyrim.html" class="text-decoration-none text-dark">
                             <img class="img_pad" src="img/skyrim.jpg" alt="logo SKYRIM">
                             <h4>TES: Skyrim</h4>
+                            </a>
                             <div>
                                 <span>R$ 149,00</span>
                                 <button class="btn btn-light">+</button>
                             </div>
                         </div>
                         <div class="card-jogo">
+                            <a href="/jogos/gtav.html" class="text-decoration-none text-dark">
                             <img class="img_pad" src="img/gtav.jpg" alt="logo GTA">
                             <h4>GTA V</h4>
+                            </a>
                             <div>
                                 <span>R$ 149,90</span>
                                 <button class="btn btn-light">+</button>
                             </div>
                         </div>
                         <div class="card-jogo">
+                            <a href="/jogos/poly.html" class="text-decoration-none text-dark">
                             <img class="img_pad" src="img/poly.jpg" alt="logo POLY BRIDGE">
                             <h4>Poly Bridge 3</h4>
+                            </a>
                             <div>
                                 <span>R$ 29,99</span>
                                 <button class="btn btn-light">+</button>
                             </div>
                         </div>
                         <div class="card-jogo">
+                            <a href="/jogos/rayman.html" class="text-decoration-none text-dark">
                             <img class="img_pad" src="img/rayman.jpg" alt=" logo RAYMAN">
                             <h4>Rayman Legends</h4>
+                            </a>
                             <div>
                                 <span>R$ 17,99</span>
                                 <button class="btn btn-light">+</button>
